# ai-blueprint-core

./: CLAUDE.md  README.md  corelog.txt  corelog.txt~  pyproject.toml  testmetadata.json
.claude/skills/blueprint-citation/: SKILL.md  citation-template.md  example-citation-output.md
.claude/skills/blueprint-metadata-extract/: SKILL.md
.claude/skills/dataset-intake/: SKILL.md
.claude/skills/fair-assess/: SKILL.md
.claude/skills/model-statement/: README.md  SKILL.md
.claude/skills/teach-blueprint/: MISSION-EXAMPLE.md  SKILL.md
.opencode/agent/: fair-resource-assessor.md
docs/: 20260515_Work-Plans_Supplementary_DSJ.docx  20260515_Work-Plans_Supplementary_DSJ.md  NIAID_Blueprint_v2_26Sep2025_forExternal.md  example.json  exmaple.json  metadataGeneration.md  workflowThoughts.md
lesson/: README.md  index.html  script.js  styles.css
mcp_bp/: README.md  __init__.py  config.py  content.py  hybrid_search.py  prompts_registry.py  search.py  sections.py  server.py
mcp_bp/tests/: __init__.py  conftest.py  test_content.py  test_hybrid_search.py  test_prompts_registry.py  test_search.py  test_sections.py
prompts/: contextPrompt.md  contextPromptShort.md  fairAssessmentInterview.md  fairAssessorAgentOpenCode.md  workPlanInterview.md  workPlanSpec.md
skills/: README.md
skills/hermes/fair-assessor/: FAIR-assessment-ImmPort-SDY2968-2026-06-09.md  README.md  SKILL.md
skills/model_statement_output/output-nrp-kimi/: model-influence-skill-development-acknowledgment_20260623_110808.txt  model-influence-skill-development-statement_20260623_110808.md  (+1 more)
(+27 files in other folders)
