[project]
name = "ai-blueprint-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.94.0",
    "dspy>=3.2.1",
    "marker-pdf>=1.10.2",
]

[project.optional-dependencies]
mcp = [
    "fastembed>=0.4",
    "fastmcp>=2.0",
    "rank-bm25>=0.2",
    "rapidfuzz>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
